# ld55engine

./: .gitignore  .gitmodules  CMakeLists.txt
include/ld55/: assets.h  camera.h  engine.h  mesh.h  model.h  renderer.h  service_locator.h  shader.h  texture.h  transform.h
include/ld55/platform/: window.h
src/: assets.cpp  engine.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  texture.cpp  transform.cpp
src/platform/: sdl_window.cpp  sdl_window.h
